# fetch_research_papers_based_on_the_user_query

./: README.md  RECORD  pyproject.toml  pyvenv.cfg  save_papers_to_csv.py  test.csv  test_email_extraction.py
examples/: basic_usage.py  industry_analysis.py
pubmed_fetcher/: __init__.py  cli.py  csv_utils.py  pubmed_api.py
